Add missing backslash

--- a/data/strongswan/5.9/alpine3.13/Dockerfile
+++ b/data/strongswan/5.9/alpine3.13/Dockerfile
@@ -54,8 +54,7 @@ RUN apk --update add \
     --disable-static \
   && mkae \
   && make install \
-  && cd .. && rm -rf /tmp/strongswan-${STRONGSWAN}
+  && cd .. && rm -rf /tmp/strongswan-${STRONGSWAN} \
   && apk del  build-base curl-dev openssl-dev \
   && rm -rf /var/chace/apk/*
-  
-  
+   
