Change mkae to make

--- a/data/strongswan/5.9/alpine3.13/Dockerfile
+++ b/data/strongswan/5.9/alpine3.13/Dockerfile
@@ -53,7 +53,7 @@ RUN apk --update add \
     --disable-sha1 \
     --disable-sha2 \
     --disable-static \
-  && mkae \
+  && make \
   && make install \
   && cd .. && rm -rf /tmp/strongswan-${STRONGSWAN} \
   && apk del  build-base curl-dev openssl-dev \
