Set ENTRYPOINT and CMD with active debug option

--- a/data/strongswan/5.9/alpine3.13/Dockerfile
+++ b/data/strongswan/5.9/alpine3.13/Dockerfile
@@ -59,3 +59,5 @@ RUN apk --update add \
   && apk del  build-base curl-dev openssl-dev \
   && rm -rf /var/chace/apk/*
    
+ENTRYPOINT ["/usr/sbin/ipsec"]
+CMD ["start", "--nofork --debug"]
