--- a/data/strongswan/5.9/alpine3.13/Dockerfile
+++ b/data/strongswan/5.9/alpine3.13/Dockerfile
@@ -61,4 +61,4 @@ EXPOSE 500/udp \
        4500/udp
    
 ENTRYPOINT ["/usr/sbin/ipsec"]
-CMD ["start", "--nofork --debug"]
+CMD ["start", "--nofork", "--debug"]
