more issue checkups

--- a/strongswan.env
+++ b/strongswan.env
@@ -1,8 +1,30 @@
 # Use private IPv4 addresses only, see https://en.wikipedia.org/wiki/Private_network#Private_IPv4_addresses
 IPV4_NETWORK=172.19.4
-
 # Use private IPv6 addresses only, see https://en.wikipedia.org/wiki/Private_network#Private_IPv6_addresses
 IPV6_NETWORK=fdbe:df57:1f47:4::
 
 # example.org is _not_ a valid hostname, use a fqdn here.
 STRONGSWAN_HOSTNAME=moon.strongswan.org
+
+##################################
+#      Possibile values are:     #
+#                                #
+# | Key Type |   Description   | #
+# |--------- | --------------- | #
+# | RSA2048  | RSA,   2048 bit | #
+# | RSA3072  | RSA,   3072 bit | #
+# | RSA4096  | RSA,   4096 bit | #
+# | ECDSA256 | ECDSA,  265 bit | #
+# | ECDSA384 | ECDSA,  384 bit | #
+# | ECDSA521 | ECDSA,  521 bit | #
+#                                #
+##################################
+
+STRONGSWAN_CA_KEY_TYPE=ECDSA384
+STRONGSWAN_CLIENT_KEY_TYPE=ECDSA384
+
+# Settings for the Internal CA certificate
+STRONGSWAN_CA_C=CH
+STRONGSWAN_CA_CN=$STRONGSWAN_HOSTNAME
+STRONGSWAN_CA_O=strongSwan
+STRONGSWAN_CA_SAN=$STRONGSWAN_HOSTNAME
