some fixes for the certificates

--- a/strongswan.env
+++ b/strongswan.env
@@ -25,6 +25,9 @@ STRONGSWAN_CLIENT_KEY_TYPE=ECDSA384
 
 # Settings for the Internal CA certificate
 STRONGSWAN_CA_C=CH
-STRONGSWAN_CA_CN=$STRONGSWAN_HOSTNAME
+STRONGSWAN_CA_CN=strongswan.org
 STRONGSWAN_CA_O=strongSwan
-STRONGSWAN_CA_SAN=$STRONGSWAN_HOSTNAME
+STRONGSWAN_SERVER_C=CH
+STRONGSWAN_SERVER_O=strongSwan VPN
+STRONGSWAN_SERVER_CN=moon.strongswan.org
+STRONGSWAN_SERVER_SAN=moon.strongswan.org
