--- a/strongswan.env
+++ b/strongswan.env
@@ -20,12 +20,11 @@ STRONGSWAN_HOSTNAME=moon.strongswan.org
 #                                #
 ##################################
 
-STRONGSWAN_CA_KEY_TYPE=ECDSA384
-STRONGSWAN_CLIENT_KEY_TYPE=ECDSA384
+STRONGSWAN_KEY_TYPE=RSA4096
 
 # Settings for the Internal CA certificate
 STRONGSWAN_CA_C=CH
-STRONGSWAN_CA_CN=strongswan.org
+STRONGSWAN_CA_CN=moon.strongswan.org
 STRONGSWAN_CA_O=strongSwan
 STRONGSWAN_SERVER_C=CH
 STRONGSWAN_SERVER_O=strongSwan VPN
